tests/sumo/devices/rerouting/personTrip/errors/access_invalid/options.sumo
--net-file=net2.net.xml --additional input_additional.add.xml
